--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,17 @@ timescoring
 scipy
 entropy
 scikit-learn
-ibmlearn
+imbalanced-learn
 pyarrow
 fastparquet
 networkx
+torch
+tsaug
+pyyaml
+ipdb
+xlrd
+xlwt
+xlutils
+seaborn
+tabulate
+tensorboard
